--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,17 +1,32 @@
+@import "../../styles/vars";
+
 .homepage {
   display: flex;
   flex-wrap: wrap;
   &-item {
     padding: 1em;
-    border: 1px solid gray;
+    border: 1px solid lightgray;
     margin-bottom: 1em;
     margin-right: 1em;
     flex: 1 1 32.3%;
+    @media screen and (max-width: $break-large) {
+      flex: 1 1 48%;
+      &:nth-child(2n) {
+        margin-right: 0
+      }
+    }
+    @media screen and (max-width: $break-medium) {
+      flex: 1 1 100%;
+        margin-right: 0
+    }    
     display: flex;
     flex-direction: column;
     min-height: 200px;
-    &:nth-child(3n) {
-      margin-right: 0
+
+    @media screen and (min-width: $break-large) {
+      &:nth-child(3n) {
+        margin-right: 0
+      }
     }
     & > p {
       flex: 1;
