--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,4 +1,7 @@
-$linkColor: rebeccapurple;
+$black: #222;
+$white: #fff;
+$primaryColor: rebeccapurple;
+$linkColor: $primaryColor;
 $break-small: 375px;
 $break-medium: 768px;
 $break-large: 1024px;
